Bug 428021: Can't define both a getter and a setter for a property of the global object, patch by Brian Crowder <crowder@fiverocks.com>, r=shaver, r=mrbkap, a=shaver